--- a/user/creality_base_extruder_0+%232_user.inst.cfg
+++ b/user/creality_base_extruder_0+%232_user.inst.cfg
@@ -9,4 +9,9 @@ setting_version = 21
 extruder = creality_base_extruder_0 #2
 
 [values]
+line_width = 0.4
+material_flow = 95.0
+retraction_amount = 0.8
+retraction_hop_enabled = True
+roofing_pattern = zigzag
 
